Fix overflow of text in post recommendation, change color of comment link to match `by`

--- a/src/components/Sidebar/PostRecommendation.less
+++ b/src/components/Sidebar/PostRecommendation.less
@@ -20,6 +20,7 @@
     border-bottom: 1px solid @white-gainsboro;
     font-size: 15px;
     padding: 10px 0;
+    overflow-wrap: break-word;
 
     &:last-of-type {
       border-bottom: 0;
@@ -29,5 +30,9 @@
   &__link-title {
     font-size: 16px;
     font-weight: bold;
+  }
+
+  &__comment-link {
+    color: @grey-mortar;
   }
 }
