--- a/src/styles/custom.less
+++ b/src/styles/custom.less
@@ -14,6 +14,7 @@
 @pink:   #ff5b77;
 @purple: #4757b2;
 @normal-grey: #4f545c;
+@grey-mortar: #595959;
 
 @primary-color: @purple;
 
